fix misalignment in footer

--- a/bkfood/homepage/static/css/footer.css
+++ b/bkfood/homepage/static/css/footer.css
@@ -122,3 +122,9 @@
     background-positon-x: 0px;
   }
 }
+
+.footer ul {
+  list-style-type: none;
+  border-bottom: 1px solid #e0e0e0;
+  padding: 0px 40px 40px 40px;
+}
